# bae

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  TASKS.md  rust-toolchain.toml  storage-roadmap.md  test_import.sh
bae/: Cargo.toml  Info.plist  build.rs  package-lock.json  package.json  tailwind.css
bae-bridge/: Cargo.toml  build-macos.sh
bae-bridge/src/: handle.rs  lib.rs  types.rs
bae-core/: Cargo.toml  build.rs
bae-core/cpp/: bae_storage_cxx_wrappers.cpp  bae_storage_helpers.cpp  bae_storage_helpers.h
bae-core/migrations/: 001_initial.sql  002_sync_tables.sql  003_encryption_scheme.sql  004_attribution.sql  005_share_grants.sql  006_share_grant_keys.sql  007_attestations.sql  008_share_grant_unique.sql  009_attestation_indexes.sql  010_dht_announcements.sql  010_release_private.sql  011_audio_format_file_cascade.sql
bae-core/src/: audio_codec.rs  bae_cloud_api.rs  cloud_routes.rs  cloud_storage.rs  cloud_sync.rs  config.rs  content_type.rs  cue_flac.rs  device_link.rs  encryption.rs  file_service.rs  follow_code.rs  hmac_utils.rs  image_server.rs  join_code.rs  keys.rs  lib.rs  library_dir.rs  metadata_replicator.rs  musicbrainz.rs  oauth.rs  retry.rs  share_token.rs  sodium_ffi.rs  subsonic.rs  subsonic_client.rs  text_encoding.rs  util.rs
bae-core/src/cloud_home/: dropbox.rs  google_drive.rs  http.rs  icloud.rs  mod.rs  onedrive.rs  pcloud.rs  s3.rs
bae-core/src/db/: client.rs  models.rs
bae-core/src/discogs/: client.rs  models.rs
bae-core/src/import/: artist_image.rs  cover_art.rs  discogs_parser.rs  file_validation.rs  folder_metadata_detector.rs  folder_scanner.rs  handle.rs  mod.rs  musicbrainz_parser.rs  service.rs  track_to_file_mapper.rs  types.rs
bae-core/src/playback/: mod.rs  service.rs  track_loader.rs
bae-core/src/storage/: cleanup.rs  mod.rs  reader.rs  traits.rs  transfer.rs
bae-core/src/sync/: apply.rs  attestation.rs  attestation_cache.rs  attribution.rs  bucket.rs  changeset_scanner.rs  cloud_home_bucket.rs  conflict.rs  envelope.rs  forward_lookup.rs  hlc.rs  invite.rs  membership.rs  mod.rs  participation.rs  pull.rs  pull_tests.rs  push.rs  reverse_lookup.rs  s3_bucket.rs  service.rs  session.rs  session_ext.rs  share_format.rs  share_grant.rs  shared_release.rs  snapshot.rs  status.rs  test_helpers.rs  tests.rs
bae-core/src/torrent/: client.rs  dht.rs  ffi.rs  mod.rs
bae-core/tests/: test_album_sort.rs  test_cue_flac.rs  test_delete.rs  test_import_operations.rs  test_playback_behavior.rs  test_playback_cpu.rs  test_storage.rs  test_storage_profile_default.rs  test_storage_profile_flow.rs  test_transfer.rs
bae-core/tests/fixtures/: test_album.cue
bae-core/tests/support/: mod.rs
bae-demo/: Cargo.toml  Dioxus.toml  build.rs  package-lock.json  package.json
bae-demo/assets/: tailwind.css
bae-demo/e2e/: package.json  playwright.config.ts  screenshots.spec.ts  serve.mjs
bae-demo/src/: demo_data.rs  main.rs
bae-demo/src/mocks/: album_detail.rs  folder_import.rs  mod.rs
bae-demo/src/pages/: album_detail.rs  import.rs  layout.rs  library.rs  mock_index.rs  mod.rs
bae-desktop/: Cargo.toml  Dioxus.toml  Info.plist  bae.entitlements  build.rs  tailwind.css
bae-desktop/assets/: icon.icns  tailwind.css
bae-desktop/scripts/: bundle_dylibs.sh
bae-desktop/src/: crash_report.rs  headless.rs  main.rs  media_controls.rs  updater.rs
bae-desktop/src/ui/: app.rs  app_context.rs  app_service.rs  display_types.rs  import_helpers.rs  local_file_url.rs  mod.rs  protocol_handler.rs  shortcuts.rs  window_activation.rs
bae-ios/BaeCrypto/: Cargo.toml  build-ios.sh
bae-ios/BaeCrypto/src/: lib.rs
bae-mocks/: Cargo.toml  Dioxus.toml  build.rs  package-lock.json  package.json  tailwind.css
bae-mocks/assets/: main.css  tailwind.css
bae-mocks/e2e/: dropdown.spec.ts  package-lock.json  package.json  playwright.config.ts  screenshots.spec.ts  virtual-grid.spec.ts
bae-mocks/e2e/screenshots/: screenshots.spec.ts
bae-mocks/fixtures/: data.json
bae-mocks/src/: demo_data.rs  lib.rs  main.rs  storage.rs
bae-mocks/src/mocks/: album_detail.rs  button.rs  error_banner.rs  folder_import.rs  library.rs  mock_header.rs  mod.rs  pill.rs  segmented_control.rs  settings.rs  text_input.rs  title_bar.rs  url_state.rs
bae-mocks/src/pages/: album_detail.rs  artist_detail.rs  import.rs  layout.rs  library.rs  mock_dropdown.rs  mock_index.rs  mod.rs  settings.rs
bae-mocks/src/ui/: checkbox.rs  chevron.rs  dropdown.rs  icon_button.rs  link_card.rs  mod.rs  toggle_button.rs
bae-proxy/: Cargo.toml
bae-proxy/src/: main.rs  proxy.rs  registry.rs  s3.rs  share.rs
bae-server/: Cargo.toml
bae-server/src/: cloud_proxy.rs  main.rs  registry.rs  tenant.rs
bae-ui/: Cargo.toml  theme.css
bae-ui/assets/: main.css
bae-ui/src/: display_types.rs  floating_ui.rs  lib.rs  wasm_utils.rs
bae-ui/src/components/: album_card.rs  app_layout.rs  artist_detail.rs  button.rs  dialog.rs  dropdown.rs  error_banner.rs  icons.rs  library.rs  menu.rs  mod.rs  modal.rs  resizable_panel.rs  segmented_control.rs  select.rs  success_toast.rs  text_input.rs  text_link.rs  title_bar.rs  utils.rs  virtual_grid.rs
bae-ui/src/stores/: active_imports.rs  album_detail.rs  app.rs  artist_detail.rs  config.rs  import.rs  library.rs  mod.rs  playback.rs  storage_profiles.rs  sync.rs  ui.rs
bae-web/: Cargo.toml  Dioxus.toml  package-lock.json  package.json  tailwind.css
bae-web/src/: api.rs  crypto.rs  lib.rs  main.rs  playback.rs
bae-web/src/pages/: mod.rs  (+4 more)
bae/assets/: main.css
bae/scripts/: bundle_dylibs.sh  bundle_sparkle.sh
bae/src/: audio_codec.rs  cache.rs  cloud_storage.rs  config.rs  cue_flac.rs  encryption.rs  flac_decoder.rs  flac_encoder.rs  flac_frame_scanner.rs  lib.rs  main.rs  media_controls.rs  musicbrainz.rs  network.rs  subsonic.rs  test_support.rs  updater.rs
bae/tests/: cue_flac_import_test.rs  test_cue_flac.rs  test_delete.rs  test_import_operations.rs  test_playback_behavior.rs  test_playback_cpu.rs  test_storage.rs  test_storage_permutations.rs  test_storage_profile_flow.rs  test_storageless_cue_flac.rs
(+450 files in other folders)
