[workspace]
members = ["bae-core", "bae-ui", "bae-desktop", "bae-mocks", "dioxus-virtual-scroll"]
resolver = "2"

[workspace.dependencies]
# PR branch with web_sys_x support for desktop
dioxus = { git = "https://github.com/ealmloff/dioxus", branch = "wasm-bindgen" }
# These -x crates work on both wasm AND native (via IPC to webview)
web-sys-x = { version = "0.3.83-alpha.1", default-features = false }
wasm-bindgen-x = "0.2.106-alpha.1"
js-sys-x = "0.3.83-alpha.1"
wasm-bindgen-futures-x = "0.4.56-alpha.1"
# Logging
tracing = "0.1.41"

[profile.release]
lto = true
codegen-units = 1
strip = true
split-debuginfo = "packed"
debug = "line-tables-only"
