[package]
name = "bae-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "bae_bridge"
crate-type = ["lib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
bae-core = { path = "../bae-core" }
uniffi = { version = "0.29", features = ["cli"] }
tokio = { version = "1.0", features = ["full"] }
tracing = { workspace = true }
thiserror = "2"
hex = "0.4"
dirs = "5.0"
serde_yaml = "0.9"
