[package]
name = "bae-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "bae_bridge"
crate-type = ["lib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
bae-core = { path = "../bae-core" }
uniffi = { version = "0.29", features = ["cli"] }
tokio = { version = "1.0", features = ["full"] }
tracing = { workspace = true }
thiserror = "2"
hex = "0.4"
dirs = "5.0"
serde_yaml = "0.9"
chrono = "0.4"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0"
axum = "0.7"
libsqlite3-sys = { version = "0.30.1", features = ["session", "bundled"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
objc = "0.2"
rand = "0.9"

[lints.rust]
unexpected_cfgs = "allow"
