[package]
name = "bae-core"
version = "0.0.0-dev"
authors = ["dima"]
edition = "2021"
build = "build.rs"

[lib]
name = "bae_core"
path = "src/lib.rs"

[dependencies]
bae-common = { path = "../bae-common" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
keyring-core = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
base64 = "0.22"
hex = "0.4"
aws-config = "1.8"
aws-sdk-s3 = "1.122"
aws-credential-types = "1.2"
async-trait = "0.1"
dirs = "5.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
nom = "7.1"
id3 = "1.14"
discid = "0.5"
regex = "1.11"
ffmpeg-next = { version = "8.0", default-features = false, features = ["codec", "format", "software-resampling"] }
ffmpeg-sys-next = { version = "8.0", default-features = false, features = ["avcodec", "avformat", "swresample"] }
libc = "0.2"
libsqlite3-sys = { version = "0.30.1", features = ["session", "bundled"] }
crc32fast = "1.4"
if-addrs = "0.14"
chardetng = "0.1"
encoding_rs = "0.8"
urlencoding = "2.1"
rtrb = "0.3.2"
futures = "0.3.31"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7", features = ["io"] }
bincode = "1.3"
cxx = { version = "1.0", optional = true }
rand = "0.9"
tracing = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "0.2", features = ["protected"] }

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
libcdio-sys = { version = "0.5", optional = true }
rayon = "1.10"
cpal = "0.15"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenvy = "0.15"

[build-dependencies]
cc = "1.2"
cxx-build = { version = "1.0", optional = true }
bindgen = "0.69"

[dev-dependencies]
tempfile = "3.8"
rusqlite = { version = "0.32.1", features = ["session", "bundled"] }
tokio = { version = "1.0", features = ["test-util"] }

[[test]]
name = "test_playback_behavior"
path = "tests/test_playback_behavior.rs"
required-features = ["test-utils"]

[[test]]
name = "test_playback_cpu"
path = "tests/test_playback_cpu.rs"
required-features = ["test-utils"]

[[test]]
name = "test_transfer"
path = "tests/test_transfer.rs"
required-features = ["test-utils"]

[features]
default = []
test-utils = []
torrent = ["dep:cxx", "dep:cxx-build"]
cd-rip = ["dep:libcdio-sys"]

[lints.clippy]
too_many_arguments = "allow"
