[package]
name = "bae-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bae-ui = { path = "../bae-ui" }
dioxus = { version = "0.7.2", features = ["router", "web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
