[package]
name = "bae-desktop"
version = "0.0.0-dev"
authors = ["dima"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "bae"
path = "src/main.rs"

[dependencies]
bae-core = { path = "../bae-core" }
bae-ui = { path = "../bae-ui" }
dioxus = { workspace = true, features = [
    # Core features
    "signals", "hooks", "html", "macro",
    # Desktop app features
    "desktop", "router", "asset", "document", "launch",
] }
rfd = "0.17"
tokio = { version = "1.0", features = ["full"] }
tracing = { workspace = true }
arboard = "3.4"
hex = "0.4"
urlencoding = "2.1"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
backtrace = "0.3.76"

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
souvlaki = "0.8"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
tracing-oslog = "0.3"
objc = "0.2"
cocoa = "0.25"
dispatch = "0.2"

[features]
default = []
test-utils = []
torrent = ["bae-core/torrent", "bae-ui/torrent"]
cd-rip = ["bae-core/cd-rip", "bae-ui/cd-rip"]

[lints.clippy]
too_many_arguments = "allow"

[lints.rust]
unexpected_cfgs = "allow"
