[package]
name = "bae-mocks"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
bae-ui = { path = "../bae-ui" }
dioxus = { workspace = true, features = ["router", "web", "asset", "document", "launch"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys-x = { workspace = true, features = ["Window", "Storage", "Location"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
test-utils = []
