[package]
name = "bae-server"
version = "0.0.0-dev"
authors = ["dima"]
edition = "2021"

[[bin]]
name = "bae-server"
path = "src/main.rs"

[dependencies]
bae-core = { path = "../bae-core" }
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
libsqlite3-sys = { version = "0.30.1", features = ["session", "bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.clippy]
too_many_arguments = "allow"
