[package]
name = "bae-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7.2", default-features = false, features = ["signals", "html", "macro", "hooks"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Element", "HtmlElement", "DomRect", "Window", "ScrollToOptions", "ScrollBehavior"] }
wasm-bindgen = "0.2"

[features]
default = []
test-utils = []
