[package]
name = "bae-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["signals", "html", "macro", "hooks"] }
dioxus-virtual-scroll = { path = "../dioxus-virtual-scroll" }
# These -x crates work on both wasm AND native (via PR #5194)
web-sys-x = { workspace = true, features = ["Element", "HtmlElement", "DomRect", "Window", "Document", "ScrollToOptions", "ScrollBehavior", "AddEventListenerOptions", "Storage", "HtmlScriptElement", "HtmlHeadElement"] }
wasm-bindgen-x = { workspace = true }
js-sys-x = { workspace = true }
wasm-bindgen-futures-x = { workspace = true }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["time"] }

[features]
default = []
test-utils = []
torrent = []
cd-rip = []
