[package]
name = "bae-web"
version = "0.0.0-dev"
edition = "2021"

[dependencies]
bae-ui = { path = "../bae-ui" }
chrono = "0.4"
dioxus = { workspace = true, features = ["router", "web", "asset", "document", "launch"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { workspace = true }
wasm-bindgen-x = { workspace = true }
web-sys-x = { workspace = true, features = ["Window", "HtmlMediaElement", "HtmlAudioElement", "MediaError"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[lints.clippy]
too_many_arguments = "allow"
