[package]
name = "bae"
version = "0.0.0-dev"
authors = ["dima"]
edition = "2021"
build = "build.rs"
default-run = "bae"

[lib]
name = "bae"
path = "src/lib.rs"

[[bin]]
name = "bae"
path = "src/main.rs"

[dependencies]
bae-ui = { path = "../bae-ui" }
dioxus = { version = "0.7.2", features = ["router"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
keyring = { version = "3.6.3", features = ["apple-native"] }
# On Linux, rfd's default features include async-std for ashpd. Since we use tokio,
# we disable defaults and explicitly enable the tokio feature instead.
rfd = { version = "0.16", default-features = false, features = ["xdg-portal", "tokio"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
aws-config = "1.1"
aws-sdk-s3 = "1.15"
aws-credential-types = "1.1"
async-trait = "0.1"
dirs = "5.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
nom = "7.1"              # Parser combinator for CUE format
id3 = "1.14"            # MP3 tag reading
discid = "0.5"          # Calculate MusicBrainz DiscIDs from TOC data
regex = "1.11"          # Regular expressions for album name cleaning
ffmpeg-next = "8.0"      # Audio decoding/encoding
ffmpeg-sys-next = "8.0"  # Raw FFI bindings for custom AVIO
libc = "0.2"            # C types for FFI bindings
crc32fast = "1.4"       # Fast CRC32 calculation for EAC-style log files
if-addrs = "0.14"       # Network interface enumeration for validation
chardetng = "0.1"       # Encoding detection for text files
urlencoding = "2.1"     # URL encoding/decoding for custom protocol paths
rtrb = "0.3.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
libcdio-sys = "0.5"     # FFI bindings to libcdio for CD drive access (requires libcdio system library)
rayon = "1.10"          # Parallel processing for CUE/FLAC splitting
cpal = "0.15"           # Cross-platform audio I/O
rtrb = "0.3.2"          # Lock-free SPSC ring buffer for real-time audio
dotenvy = "0.15"        # .env file loading for dev mode
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }  # Logging configuration

futures = "0.3.31"
tokio-stream = "0.1.17"
souvlaki = "0.8"
bincode = "1.3"
cxx = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
tracing-oslog = "0.3"  # macOS unified logging (accessible via `log` CLI)
objc = "0.2"
cocoa = "0.25"

[build-dependencies]
cc = "1.2"
cxx-build = "1.0"
bindgen = "0.69"

[dev-dependencies]
tempfile = "3.8"

# Integration tests that need testing APIs
[[test]]
name = "test_playback_behavior"
path = "tests/test_playback_behavior.rs"
required-features = ["test-utils"]

[[test]]
name = "test_playback_cpu"
path = "tests/test_playback_cpu.rs"
required-features = ["test-utils"]

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]
test-utils = []  # Feature for test helper APIs

[lints.clippy]
too_many_arguments = "allow"

[lints.rust]
# objc crate uses cfg(feature = "cargo-clippy") internally which triggers this warning
unexpected_cfgs = "allow"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
