[package]
name = "bae_crypto"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["lib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uniffi = { version = "0.29", features = ["cli"] }
hex = "0.4"
thiserror = "2"
